# The UI wallet
add_executable(Spectrecoin ../../spectre.qrc ${CMAKE_CURRENT_LIST_DIR}/spectre.cpp)

target_sources(Spectrecoin
        PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}/aboutdialog.h
        ${CMAKE_CURRENT_LIST_DIR}/addresstablemodel.h
        ${CMAKE_CURRENT_LIST_DIR}/askpassphrasedialog.h
        ${CMAKE_CURRENT_LIST_DIR}/bitcoinaddressvalidator.h
        ${CMAKE_CURRENT_LIST_DIR}/bitcoinamountfield.h
        ${CMAKE_CURRENT_LIST_DIR}/bitcoinunits.h
        ${CMAKE_CURRENT_LIST_DIR}/bridgetranslations.h
        ${CMAKE_CURRENT_LIST_DIR}/clientmodel.h
        ${CMAKE_CURRENT_LIST_DIR}/coincontroldialog.h
        ${CMAKE_CURRENT_LIST_DIR}/coincontroltreewidget.h
        ${CMAKE_CURRENT_LIST_DIR}/csvmodelwriter.h
        ${CMAKE_CURRENT_LIST_DIR}/editaddressdialog.h
        ${CMAKE_CURRENT_LIST_DIR}/guiconstants.h
        ${CMAKE_CURRENT_LIST_DIR}/guiutil.h
        ${CMAKE_CURRENT_LIST_DIR}/monitoreddatamapper.h
        ${CMAKE_CURRENT_LIST_DIR}/notificator.h
        ${CMAKE_CURRENT_LIST_DIR}/optionsmodel.h
        ${CMAKE_CURRENT_LIST_DIR}/paymentserver.h
        ${CMAKE_CURRENT_LIST_DIR}/peertablemodel.h
        ${CMAKE_CURRENT_LIST_DIR}/qvalidatedlineedit.h
        ${CMAKE_CURRENT_LIST_DIR}/qvaluecombobox.h
        ${CMAKE_CURRENT_LIST_DIR}/rpcconsole.h
        ${CMAKE_CURRENT_LIST_DIR}/scicon.h
        ${CMAKE_CURRENT_LIST_DIR}/spectrebridge.h
        ${CMAKE_CURRENT_LIST_DIR}/spectregui.h
        ${CMAKE_CURRENT_LIST_DIR}/trafficgraphwidget.h
        ${CMAKE_CURRENT_LIST_DIR}/transactiondesc.h
        ${CMAKE_CURRENT_LIST_DIR}/transactionrecord.h
        ${CMAKE_CURRENT_LIST_DIR}/transactiontablemodel.h
        ${CMAKE_CURRENT_LIST_DIR}/walletmodel.h

        PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/aboutdialog.cpp
        ${CMAKE_CURRENT_LIST_DIR}/addresstablemodel.cpp
        ${CMAKE_CURRENT_LIST_DIR}/askpassphrasedialog.cpp
        ${CMAKE_CURRENT_LIST_DIR}/bitcoinaddressvalidator.cpp
        ${CMAKE_CURRENT_LIST_DIR}/bitcoinamountfield.cpp
        ${CMAKE_CURRENT_LIST_DIR}/bitcoinstrings.cpp
        ${CMAKE_CURRENT_LIST_DIR}/bitcoinunits.cpp
        ${CMAKE_CURRENT_LIST_DIR}/clientmodel.cpp
        ${CMAKE_CURRENT_LIST_DIR}/coincontroldialog.cpp
        ${CMAKE_CURRENT_LIST_DIR}/coincontroltreewidget.cpp
        ${CMAKE_CURRENT_LIST_DIR}/csvmodelwriter.cpp
        ${CMAKE_CURRENT_LIST_DIR}/editaddressdialog.cpp
        ${CMAKE_CURRENT_LIST_DIR}/guiutil.cpp
        ${CMAKE_CURRENT_LIST_DIR}/monitoreddatamapper.cpp
        ${CMAKE_CURRENT_LIST_DIR}/notificator.cpp
        ${CMAKE_CURRENT_LIST_DIR}/optionsmodel.cpp
        ${CMAKE_CURRENT_LIST_DIR}/paymentserver.cpp
        ${CMAKE_CURRENT_LIST_DIR}/peertablemodel.cpp
        ${CMAKE_CURRENT_LIST_DIR}/qvalidatedlineedit.cpp
        ${CMAKE_CURRENT_LIST_DIR}/qvaluecombobox.cpp
        ${CMAKE_CURRENT_LIST_DIR}/rpcconsole.cpp
        ${CMAKE_CURRENT_LIST_DIR}/scicon.cpp
        ${CMAKE_CURRENT_LIST_DIR}/spectrebridge.cpp
        ${CMAKE_CURRENT_LIST_DIR}/spectregui.cpp
        ${CMAKE_CURRENT_LIST_DIR}/trafficgraphwidget.cpp
        ${CMAKE_CURRENT_LIST_DIR}/transactiondesc.cpp
        ${CMAKE_CURRENT_LIST_DIR}/transactionrecord.cpp
        ${CMAKE_CURRENT_LIST_DIR}/transactiontablemodel.cpp
        ${CMAKE_CURRENT_LIST_DIR}/walletmodel.cpp
        )

if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    target_sources(Spectrecoin
            PUBLIC
            ${CMAKE_CURRENT_LIST_DIR}/macdockiconhandler.h
            ${CMAKE_CURRENT_LIST_DIR}/macnotificationhandler.h
            )
endif()

# Link the UI wallet
target_link_libraries(Spectrecoin
        PUBLIC
        spectrecoin_lib
        Qt5::Core
        Qt5::Widgets
        Qt5::WebEngine
        Qt5::WebEngineWidgets
        Boost::boost
        Boost::chrono
        Boost::filesystem
        Boost::iostreams
        Boost::program_options
        Boost::system
        Boost::thread
        OpenSSL::SSL
        OpenSSL::Crypto
        Oracle::BerkeleyDB
        leveldb
        )
